--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript practice</title>
+    <title>Extra market</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
                     <a href="#">Product</a>
                 </li>
                 <li>
-                    <a href="#">Skill</a>
+                    <a href="#">Design</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
